--- a/src/data1/dlgPurchaseData.form
+++ b/src/data1/dlgPurchaseData.form
@@ -67,7 +67,7 @@
               <Component id="txtSearchCustomer" min="-2" pref="350" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnSearch" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="212" max="32767" attributes="0"/>
+              <EmptySpace pref="167" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -94,7 +94,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Search : "/>
+        <Property name="text" type="java.lang.String" value="Search by Name : "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnSearch">
