--- a/src/data1/dlgStockData.form
+++ b/src/data1/dlgStockData.form
@@ -57,7 +57,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Search : "/>
+        <Property name="text" type="java.lang.String" value="Search by Name : "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtSearch">
